# dazwidget2script

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DazPluginBase.def  MDMyWidget.cpp  MDMyWidget.h  custom widget test.dsa  pluginmain.cpp
